src/test/ui/specialization/specialization-overlap-hygiene.stderr
error[E0592]: duplicate definitions with name `f`
  --> $DIR/specialization-overlap-hygiene.rs:13:4
   |
LL |     fn f() {}
   |     --------- other definition for `f`
...
LL |    fn f() {}
   |    ^^^^^^^^^ duplicate definitions for `f`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0592`.
